page added for breakfast recipies and layout formatted ready for content

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="breakfast-recipes.html">Breakfast Recipies</a></li>
+                <li><a href="breakfast-recipies.html">Breakfast Recipies</a></li>
                 <li><a href="lunch-recipies.html">Lunch Recipies</a></li>
                 <li><a href="dinner-recipies.html">Dinner Recipies</a></li>
             </ul>
