main page titles added for breakfast, lunch and dinner

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -28,7 +28,7 @@
     <main>
         <section class="hero-image2">
             <div class="cover-text">
-                <h2>Title</h2>
+                <h2>Why not try out our range of delicious breakfast recipies!</h2>
                 <p></p>
         </section>
         </section>
