--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -28,13 +28,12 @@
     <main>
         <section class="hero-image4">
             <div class="cover-text">
-                <h2>Title</h2>
-                <p></p>
+                <h2>Dinner Recipies</h2>
         </section>
         </section>
         <div class="main-content" id="main-content">
             <section class="section-one">
-                <h2>Section</h2>
+                <h2>Why not try out our range of delicious dinner recipies!</h2>
                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
                     accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique vel
                     temporibus facere error nisi!</p>
