added images to the aside sections of on the breakfast page

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -29,7 +29,6 @@
         <section class="hero-image2">
             <div class="cover-text">
                 <h2>Why not try out our range of delicious breakfast recipies!</h2>
-                <p></p>
         </section>
         </section>
         <div class="main-content" id="main-content">
@@ -41,15 +40,18 @@
                 <h2 class="content-bottom"></h2>
             </section>
             <div class="aside-columns" id="breakfast-row-one">
-                <aside>
-                    <h2>Aside</h2>
+                <aside class="banana-pancakes">
+                    <h2>Banana Pancakes</h2>
+                    <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
+                        alt="An image of a plate full of banana pancakes.">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ab ex eveniet molestias, quisquam
                         nesciunt eos repellendus cum rerum necessitatibus fugiat. Rem cumque voluptates aperiam,
                         repellat molestiae eligendi sunt ab?</p>
                     <h2 class="content-bottom"></h2>
                 </aside>
-                <aside>
-                    <h2>Aside</h2>
+                <aside class="bacon-and-eggs">
+                    <h2>Fried bacon with poached egg and tomatoes</h2>
+                    <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg" alt="An image of a place with eggs and bacon on it.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam tempora voluptate asperiores
                         debitis aperiam id, repellat corporis modi officiis sed minima! Deleniti ea autem accusamus,
                         provident sint culpa minus ad.</p>
@@ -57,45 +59,41 @@
                 </aside>
             </div>
             <div class="aside-columns" id="breakfast-row-two">
-                <aside>
-                    <h2>Aside</h2>
+                <aside class="overnight-oats">
+                    <h2>Overnight Oats</h2>
+                    <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg" alt="An image of bowl containing overnight oats.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
                     <h2 class="content-bottom"></h2>
                 </aside>
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                </div>
-                <div class="aside-columns" id="breakfast-row-two">
-                <aside>
-                    <h2>Aside</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
-                    <h2 class="content-bottom"></h2>
-                </aside>
-                <aside>
-                    <h2>Aside</h2>
+                <aside class="breakfast-frittata">
+                    <h2>All-day breakfast frittata</h2>
+                    <img src="./assets/images/all-day_breakfast_12416_16x9.jpg" alt="An image of plate of a breakfast frittata.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
                     <h2 class="content-bottom"></h2>
                 </aside>
             </div>
-
-            <section>
-                <h2>Section</h2>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Temporibus, ex. Modi, quos officiis in
-                    impedit quod iure veniam officia est suscipit distinctio, illum repellendus. Possimus, nesciunt.
-                    Iusto iste odio amet.</p>
+            <div class="aside-columns" id="breakfast-row-two">
+                <aside class="blueberry-ricotta">
+                    <h2>Blueberry Ricotta Pot</h2>
+                    <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg" alt="An image of blueberry ricotta pot.">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
+                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
+                        qui aliquid unde consectetur suscipit obcaecati.</p>
                     <h2 class="content-bottom"></h2>
-            </section>
+                </aside>
+                <aside class="breakfast-quesadillas">
+                    <h2>Breakfast Quesadillas (V)</h2>
+                    <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg" alt="An image of a breakfast quesadilla on a cutting board.">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
+                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
+                        qui aliquid unde consectetur suscipit obcaecati.</p>
+                    <h2 class="content-bottom"></h2>
+                </aside>
+            </div>
         </div>
     </main>
     <footer>
