recipies added first breakfst column

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -44,24 +44,101 @@
                     <h2>Banana Pancakes</h2>
                     <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
                         alt="An image of a plate full of banana pancakes.">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Velit ab ex eveniet molestias, quisquam
-                        nesciunt eos repellendus cum rerum necessitatibus fugiat. Rem cumque voluptates aperiam,
-                        repellat molestiae eligendi sunt ab?</p>
+                    <p>These quick and easy banana pancakes are dairy-free and egg-free. Mashed banana is an egg
+                        substitute that works really well in pancakes, and makes them taste even better. They can be
+                        ready in just 10 minutes, and wolfed down in one! Perfect for busy mornings.</p>
+                    <input type="checkbox" id="expand-checkbox">
+                    <label for="expand-checkbox">Expand/Hide</label>
+                    <div class="pancake-expand">
+                        <p>Each pancake (without the optional toppings) provides 119 kcal, 2.5g protein, 22g
+                            carbohydrates
+                            (of which 5g sugars), 2g fat (of which 1.5g saturates), 1.5g fibre and 0.22g salt.</p>
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>2 bananas, peeled (approx. 160g/5oz peeled weight)</li>
+                            <li>120g/4½oz plain flour</li>
+                            <li>1 tsp baking powder</li>
+                            <li>120ml/4¼fl oz oat milk (or other plant-based milk)</li>
+                            <li>3 tsp coconut or vegetable oil</li>
+                        </ul>
+                        <h3>To serve (optional)</h4>
+                            <ul>
+                                <li> handful blueberries</li>
+                                <li> 1 banana, sliced</li>
+                                <li> maple syrup (or honey if you're not vegan), to drizzle</li>
+                                <li> dollop coconut yoghurt?</li>
+                            </ul>
+                            <h3>Method</h3>
+                            <ol>
+                                <li>Roughly chop the bananas and add to a blender with the flour, baking powder and oat
+                                    milk. Blend until smooth. Alternatively, mash the banana thoroughly on a plate, then
+                                    transfer to a bowl and whisk in the other ingredients until smooth. </li>
+                                <li>Heat a teaspoon of the oil in a small frying pan over a medium–high heat and spoon
+                                    the mixture into the pan to make two pancakes, each about 10cm/4in in diameter – you
+                                    will need about a tablespoon of mixture per pancake.</li>
+                                <li>Cook for around 2 minutes on each side, or until golden-brown, adding more oil if
+                                    needed, then keep warm. Repeat until you have made all the pancakes. </li>
+                                <li>To serve, divide the pancakes between two plates and top with the banana,
+                                    blueberries, maple syrup and coconut yoghurt. Enjoy while still warm. </li>
+                            </ol>
+                    </div>
                     <h2 class="content-bottom"></h2>
                 </aside>
                 <aside class="bacon-and-eggs">
                     <h2>Fried bacon with poached egg and tomatoes</h2>
-                    <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg" alt="An image of a place with eggs and bacon on it.">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quisquam tempora voluptate asperiores
-                        debitis aperiam id, repellat corporis modi officiis sed minima! Deleniti ea autem accusamus,
-                        provident sint culpa minus ad.</p>
+                    <img src="./assets/images/pan-fried_bacon_with_76907_16x9.jpg"
+                        alt="An image of a place with eggs and bacon on it.">
+                    <p>You don’t have to give up your bacon and eggs when you’re dieting – just slightly change the way
+                        you cook it. Choose good lean back bacon and partner it with poached eggs for protein and fresh
+                        nutritious veg.</p>
+                    <input type="checkbox" id="expand-checkbox">
+                    <label for="expand-checkbox">Expand/Hide</label>
+                    <div class="bacon-and-eggs-expand">
+                        <p>With a GI of 45 this meal is high protein, low GI and provides 264 kcal per portion.</p>
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>1 tsp sunflower oil</li>
+                            <li>4 rashers of rindless smoked back bacon</li>
+                            <li>1 tsp white wine vinegar</li>
+                            <li>2 free-range very fresh eggs (fridge cold)</li>
+                            <li>8 cherry tomatoes, halved</li>
+                            <li>good handful of watercress</li>
+                            <li>drizzle of good-quality balsamic vinegar</li>
+                            <li>freshly ground black pepper</li>
+                        </ul>
+                        <h3>Method</h3>
+                        <ol>
+                            <li>Brush a large non-stick frying pan with sunflower oil, using the tip of a pastry brush.
+                                Place the pan over a medium heat and add the bacon. Cook for 2 minutes until lightly
+                                browned, then turn and fry on the other side for another 3 minutes.</li>
+                            <li>While the bacon is cooking, half fill a medium non-stick saucepan with water, add the
+                                vinegar and bring to the boil. Turn the heat to low, so the water is only just bubbling.
+                                Crack the eggs into the water, one at a time, spacing them well apart. Cook for 2½
+                                minutes.</li>
+                            <li>The eggs should rise to the surface within a minute. If the egg white sticks to the
+                                bottom
+                                of the pan, lift it gently with a wooden spoon. Alternatively, you can use a hob-top egg
+                                poacher, lightly greased with sunflower oil.</li>
+                            <li>Add the tomatoes to the pan with the bacon and season with plenty of black pepper. Cook
+                                the
+                                tomatoes for about a minute until just beginning to soften, turning them once.</li>
+                            <li>Put a small pile of watercress on each plate. Put some bacon and tomatoes on the plates
+                                and
+                                drizzle with a dash of balsamic vinegar. Take the eggs out of the water with a slotted
+                                spoon
+                                and place them on top. Season with a little more pepper and tuck in right away while
+                                it’s
+                                all lovely and hot.</li>
+                        </ol>
+                    </div>
                     <h2 class="content-bottom"></h2>
                 </aside>
             </div>
             <div class="aside-columns" id="breakfast-row-two">
                 <aside class="overnight-oats">
                     <h2>Overnight Oats</h2>
-                    <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg" alt="An image of bowl containing overnight oats.">
+                    <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg"
+                        alt="An image of bowl containing overnight oats.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
@@ -69,7 +146,8 @@
                 </aside>
                 <aside class="breakfast-frittata">
                     <h2>All-day breakfast frittata</h2>
-                    <img src="./assets/images/all-day_breakfast_12416_16x9.jpg" alt="An image of plate of a breakfast frittata.">
+                    <img src="./assets/images/all-day_breakfast_12416_16x9.jpg"
+                        alt="An image of plate of a breakfast frittata.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
@@ -79,7 +157,8 @@
             <div class="aside-columns" id="breakfast-row-two">
                 <aside class="blueberry-ricotta">
                     <h2>Blueberry Ricotta Pot</h2>
-                    <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg" alt="An image of blueberry ricotta pot.">
+                    <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
+                        alt="An image of blueberry ricotta pot.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
@@ -87,7 +166,8 @@
                 </aside>
                 <aside class="breakfast-quesadillas">
                     <h2>Breakfast Quesadillas (V)</h2>
-                    <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg" alt="An image of a breakfast quesadilla on a cutting board.">
+                    <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg"
+                        alt="An image of a breakfast quesadilla on a cutting board.">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
                         quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
                         qui aliquid unde consectetur suscipit obcaecati.</p>
