--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -139,38 +139,202 @@
                     <h2>Overnight Oats</h2>
                     <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg"
                         alt="An image of bowl containing overnight oats.">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
+                    <p>Prepare this blueberry and apple overnight oats recipe for a super-quick and tasty breakfast the
+                        next morning.</p>
+                    <input type="checkbox" id="expand-checkbox">
+                    <label for="expand-checkbox">Expand/Hide</label>
+                    <div class="overnight-oats">
+                        <p>With a GI of 46 this meal is high protein, low GI and provides 335 kcal per portion.</p>
+                        <h3>Ingedients</h3>
+                        <ul>
+                            <li>50g/1¾oz porridge oats</li>
+                            <li>2 apples, coarsely grated</li>
+                            <li>20g/¾oz blanched hazelnuts, roughly chopped</li>
+                            <li>¼ tsp ground cinnamon</li>
+                            <li>¼ tsp ground nutmeg</li>
+                            <li>200g/7oz 0% fat Greek yoghurt</li>
+                            <li>100ml/3½fl oz skimmed milk</li>
+                            <li>100g/3½oz blueberries </li>
+                            <li>10g/¼oz flaked almonds, toasted</li>
+                        </ul>
+                        <h3>Method</h3>
+                        <ol>
+                            <li>In a bowl mix the oats, apples, hazelnuts, cinnamon and nutmeg. Stir in the yoghurt and
+                                milk, then cover the bowl and chill in the fridge for several hours or overnight. </li>
+                            <li>Spoon into two bowls and top with the blueberries and almonds. </li>
+                        </ol>
+                    </div>
+
                     <h2 class="content-bottom"></h2>
                 </aside>
                 <aside class="breakfast-frittata">
                     <h2>All-day breakfast frittata</h2>
                     <img src="./assets/images/all-day_breakfast_12416_16x9.jpg"
                         alt="An image of plate of a breakfast frittata.">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
+                    <p>We’ve packed loads of extra veggies into this easy frittata so you can get the jump on your
+                        5-a-day from the get go. But it’s also great cold in a sandwich.</p>
+                    <input type="checkbox" id="expand-checkbox">
+                    <label for="expand-checkbox">Expand/Hide</label>
+                    <div class="breakfast-frittata">
+                        <p>Each serving provides 290 kcal, 24g protein, 11g carbohydrate (of which 3g sugars), 16g fat
+                            (of which 5g saturates), 3g fibre and 1.4g salt.</p>
+                        <h3>ingredients</h3>
+                        <ul>
+                            <li>2 rashers back bacon, all visible fat removed</li>
+                            <li>spray oil, for frying</li>
+                            <li>125g/4½oz mushrooms, thinly sliced</li>
+                            <li>75g/2½oz spinach</li>
+                            <li>100g/3½oz boiled potatoes (or leftover baked potatoes) cut into rough chunks</li>
+                            <li>100g/3½oz cherry tomatoes, halved</li>
+                            <li>4 medium free-range eggs, beaten</li>
+                            <li>salt and freshly ground black pepper</li>
+                        </ul>
+                        <h3>Method</h3>
+                        <ul>
+                            <li>Preheat the grill to medium-high. Grill the bacon until it is browned on both sides.
+                                Remove from the grill and set aside. </li>
+
+                            <li>Spray a small non-stick frying pan with spray oil and place on a medium-high heat. When
+                                the pan is hot, fry the mushrooms for 5 minutes, stirring frequently, until they are
+                                browned and softened. Set aside.</li>
+
+                            <li>Rinse the spinach under cold water and drain it in a sieve. Add it to the frying pan and
+                                cook for 1-2 minutes, stirring all the time, so that the leaves steam in the residual
+                                water. When the spinach is cooked, but still bright green, transfer back to the sieve
+                                and press with the back of a spoon to squeeze any remaining water from the leaves. Set
+                                aside.</li>
+
+                            <li>Wipe the frying pan clean, spray with oil and return to a medium heat. Fry the potatoes
+                                and tomatoes without stirring too much, so that the vegetables take on some colour but
+                                don’t fall apart – about 5 minutes.</li>
+
+                            <li>Meanwhile, beat the eggs in a fairly large bowl. Chop the cooked bacon and the spinach.
+                                Add to the eggs along with the cooked mushrooms. Season the eggs with salt and freshly
+                                ground black pepper. </li>
+
+                            <li>When the tomatoes and potatoes are golden-brown in places, spoon them into the eggs with
+                                the other vegetables. Give the egg mixture a brief stir, then pour it back into the
+                                frying pan and place it back over the heat. Cook gently over a medium heat for 10
+                                minutes, until the egg looks set around the edges (it may be a little runny on the top).
+                            </li>
+
+                            <li>Place the pan under the grill for 2 minutes to finish cooking the frittata on top. Turn
+                                out the frittata onto a plate and let it cool slightly before cutting into wedges. Serve
+                                with a crunchy salad for maximum veggies.</li>
+                        </ul>
+                    </div>
                     <h2 class="content-bottom"></h2>
                 </aside>
             </div>
-            <div class="aside-columns" id="breakfast-row-two">
+            <div class="aside-columns" id="breakfast-row-three">
                 <aside class="blueberry-ricotta">
                     <h2>Blueberry Ricotta Pot</h2>
                     <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
                         alt="An image of blueberry ricotta pot.">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
+                    <p>Ricotta is eaten for breakfast in Italy and also works well as a snack. Cinnamon adds sweetness
+                        without sugar and blueberries are a relatively low-sugar fruit. Honey tastes sweeter than sugar
+                        and you need just a spoonful. Briefly dip your teaspoon in very hot water to help it slip off
+                        easily.</p>
+                    <input type="checkbox" id="expand-checkbox">
+                    <label for="expand-checkbox">Expand/Hide</label>
+                    <div class="blueberry-ricotta">
+                        <p>Each serving provides 211 kcal, 10g protein, 16.5g carbohydrates (of which 16.5g sugars), 11g
+                            fat
+                            (of which 7g saturates), 2g fibre and 0.3g salt. </p>
+                        <h3>Ingredients</h3>
+                        <ul>
+                            <li>200g/7oz ricotta</li>
+                            <li>pinch ground cinnamon</li>
+                            <li>2 tsp runny honey</li>
+                            <li>200g/7oz blueberries</li>
+                        </ul>
+                        <h3>Method</h3>
+                        <ol>
+                            <li>Mix the ricotta with the cinnamon and half the honey in a bowl. Gently stir in most of
+                                the blueberries. Divide the mixture between two ramekins or small bowls. </li>
+                            <li>Top with the remaining blueberries and keep in the fridge, covered, until ready to eat.
+                                Drizzle over the remaining honey just before serving.</li>
+                        </ol>
+                    </div>
                     <h2 class="content-bottom"></h2>
                 </aside>
                 <aside class="breakfast-quesadillas">
                     <h2>Breakfast Quesadillas (V)</h2>
                     <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg"
                         alt="An image of a breakfast quesadilla on a cutting board.">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero facilis assumenda, nisi saepe
-                        quasi molestiae porro, consequatur quaerat quam voluptate officiis inventore pariatur temporibus
-                        qui aliquid unde consectetur suscipit obcaecati.</p>
+                    <p>For a leisurely weekend brunch or a light meal any day of the week, these breakfast quesadillas
+                        are filled with bacon and scrambled eggs and served with colourful salsas, guacamole and refried
+                        beans.</p>
+                    <h3>Ingredients</h3>
+                    <ol>
+                        <li>unsalted butter, for cooking </li>
+                        <li>6 rashers unsmoked bacon, chopped </li>
+                        <li>6 large free-range eggs</li>
+                        <li>splash milk</li>
+                        <li>4 flour tortillas</li>
+                        <li>½ small red onion, finely chopped</li>
+                        <li>4 tbsp cheddar or Monterey Jack cheese, grated</li>
+                        <li>small handful chopped fresh coriander</li>
+                        <li>cayenne pepper</li>
+                    </ol>
+                    <h3>For the tomato salsa</h3>
+                    <ul>
+                        <li>150g/5½oz small cherry tomatoes, chopped</li>
+                        <li>½ red onion, finely chopped</li>
+                        <li>1–2 tsp finely chopped hot green jalapeño chillies (from a jar)</li>
+                        <li>1 tbsp honey</li>
+                        <li>1 lime, juice only</li>
+                        <li>pinch cayenne pepper</li>
+                        <li>¼ tsp salt</li>
+                        <li>pinch freshly ground black pepper</li>
+                        <li>4 tbsp chopped fresh coriander</li>
+                    </ul>
+                    <h3>For the mango salsa</h3>
+                    <ul>
+                        <li>1 ripe mango, peeled, stone removed, finely chopped</li>
+                        <li>½ red onion, finely chopped</li>
+                        <li>1–2 tsp finely chopped hot green jalapeño chillies (from a jar)</li>
+                        <li>1 lime, juice only</li>
+                        <li>pinch cayenne pepper</li>
+                        <li>¼ tsp salt</li>
+                        <li>pinch freshly ground black pepper</li>
+                        <li>4 tbsp chopped fresh coriander</li>
+                    </ul>
+                    <h3>To serve</h3>
+                    <ul>
+                        <li>4 tbsp soured cream</li>
+                        <li>guacamole</li>
+                        <li>refried beans</li>
+                    </ul>
+                    <h3>Method</h3>
+                    <ol>
+                        <li>First make the salsas. For the tomato salsa, put the tomatoes in a bowl. Mix in the onion
+                            and jalapeños. Add the honey, lime juice, cayenne pepper, salt and pepper and mix well. Add
+                            the coriander and set aside for 30 minutes. </li>
+
+                        <li>Make the mango salsa in the same way, in a separate bowl.</li>
+
+                        <li>Preheat the oven to 180C/160C Fan/Gas 4. Lightly grease a large baking sheet.</li>
+
+                        <li>Heat a frying pan over a high heat and add a knob of butter. Cook the bacon for a few
+                            minutes until crisp. Remove from the heat and leave to cool a little. </li>
+
+                        <li>Whisk the eggs together with salt and pepper and a splash of milk. Melt a large knob of
+                            butter in a non-stick saucepan. Add the eggs and cook over a low heat, stirring until the
+                            eggs are softly scrambled. Remove from the heat.</li>
+
+                        <li>To assemble, melt a little more butter. Lay the tortillas on a board and lightly brush with
+                            the melted butter. Place a quarter of the bacon on one half of each tortilla. Top with the
+                            scrambled egg, and a couple of tablespoons of tomato salsa. Sprinkle on some chopped red
+                            onion, grated cheese and a little chopped coriander; don’t overfill.</li>
+
+                        <li>Fold over the tortilla to make a semicircle shape, brush the top with more melted butter and
+                            sprinkle over a pinch of cayenne pepper. Cut each tortilla in half and carefully place on
+                            the baking sheet. </li>
+                            
+                        <li>Bake for 10 minutes. Leave to cool slightly and serve with the mango salsa, soured cream,
+                            guacamole, refried beans and any remaining tomato salsa. </li>
+                    </ol>
                     <h2 class="content-bottom"></h2>
                 </aside>
             </div>
