added recipies into individual containers

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -261,6 +261,10 @@
                 </div>
                 <div class="aside-columns" id="breakfast-row-three">
                     <aside class="blueberry-ricotta">
+                       <div class="blueberry-ricotta">
+                        <input type="checkbox" id="expand-checkbox">
+                        <label for="expand-checkbox">Expand/Hide</label>
+                        <div class="blueberry-ricotta"></div>
                         <h2>Blueberry Ricotta Pot</h2>
                         <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
                             alt="An image of blueberry ricotta pot.">
@@ -294,6 +298,7 @@
                                     eat.
                                     Drizzle over the remaining honey just before serving.</li>
                             </ol>
+                       </div>
                         </div>
                         <h2 class="content-bottom"></h2>
                     </aside>
@@ -301,6 +306,8 @@
                         <h2>Breakfast Quesadillas (V)</h2>
                         <img src="./assets/images/breakfast_quesadillas_82028_16x9.jpg"
                             alt="An image of a breakfast quesadilla on a cutting board.">
+                        <input type="checkbox" id="expand-checkbox">
+                        <label for="expand-checkbox">Expand/Hide</label>
                         <p>For a leisurely weekend brunch or a light meal any day of the week, these breakfast
                             quesadillas
                             are filled with bacon and scrambled eggs and served with colourful salsas, guacamole and
