removed bottom borders from inside recipes

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -33,7 +33,7 @@
         </section>
         <div class="main-content" id="main-content">
             <div class="breakfast-recipies">
-                Ï <section class="section-one">
+                <section class="section-one">
                     <h2>Section</h2>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsam reiciendis praesentium porro
                         accusantium, veritatis dolore quos tenetur ut, debitis in ducimus earum maiores dicta similique
