adjusted padding to main content for breakfast page

--- a/breakfast-recipies.html
+++ b/breakfast-recipies.html
@@ -41,7 +41,7 @@
                         temporibus facere error nisi!</p>
                     <h2 class="content-bottom"></h2>
                 </section>
-                <div class="aside-columns" id="breakfast-row-one">
+                <div class="breakfast-row-one" id="breakfast-row-one">
                     <aside class="banana-pancakes">
                         <h2>Banana Pancakes</h2>
                         <img src=".//assets/images/banana_pancakes_62919_16x9.jpg"
@@ -148,7 +148,7 @@
                         <label for="expand-checkbox-bacon-and-eggs" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                 </div>
-                <div class="aside-columns" id="breakfast-row-two">
+                <div class="breakfast-row-two" id="breakfast-row-two">
                     <aside class="overnight-oats">
                         <h2>Overnight Oats</h2>
                         <img src="./assets/images/overnight_muesli_with_57876_16x9.jpg"
@@ -254,7 +254,7 @@
                         <label for="expand-checkbox-frittata" id="expand-checkbox-label">Expand/Hide</label>
                     </aside>
                 </div>
-                <div class="aside-columns" id="breakfast-row-three">
+                <div class="breakfast-row-three" id="breakfast-row-three">
                     <aside class="blueberry-ricotta">
                         <h2>Blueberry Ricotta Pot</h2>
                         <img src="./assets/images/ricotta_pots_with_13643_16x9.jpg"
